--- a/advanced_website_status_check/Dockerfile
+++ b/advanced_website_status_check/Dockerfile
@@ -1,10 +1,22 @@
-FROM python:3.8-slim
+# Use the official Python image from the Docker Hub
+FROM python:3.12-slim
 
+# Set a non-root user for security purposes
+RUN useradd -m appuser
+
+# Set the working directory
 WORKDIR /app
 
-COPY requirements.txt ./
-RUN pip install -r requirements.txt
+# Copy and install dependencies with safety checks
+COPY --chown=appuser:appuser requirements.txt ./
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# Copy the application code
+COPY --chown=appuser:appuser . .
 
+# Switch to the non-root user
+USER appuser
+
+# Set default command (adjust as needed based on your application)
 CMD ["python", "check_status.py"]
