--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,15 +31,28 @@ classifiers = [
     "Topic :: System :: Systems Administration",
 ]
 dependencies = [
+    # Core dependencies needed by all plugins
     "httpx>=0.26.0",
-    "pexpect>=4.9.0",
-    "pymongo>=4.6.0",
     "rich>=13.7.0",
-    "typer>=0.9.0",
-    "pydantic>=2.5.0",
 ]
 
+# Optional dependencies grouped by functionality
 [project.optional-dependencies]
+mongodb = [
+    "pymongo>=4.6.0",
+]
+ssh = [
+    "paramiko>=3.0.0",
+]
+cli = [
+    "typer>=0.9.0",
+]
+schema = [
+    "pydantic>=2.5.0",
+]
+legacy = [
+    "pexpect>=4.9.0",
+]
 dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
@@ -62,16 +75,21 @@ security = [
     "safety>=2.3.5",
 ]
 all = [
-    "nagios-plugins-collection[dev,security]",
+    "nagios-plugins-collection[mongodb,ssh,cli,schema,legacy,dev,security]",
 ]
 
 [project.scripts]
+# Standard plugins following the new framework
+check_website_status = "nagios_plugins.plugins.check_website_status:main"
+check_component_status = "nagios_plugins.plugins.check_component_status:main" 
+check_mongodb_health = "nagios_plugins.plugins.check_mongodb_health:main"
+check_ro_mounts = "nagios_plugins.plugins.check_ro_mounts:main"
+
+# Legacy plugins
 check_monghealth = "nagios_plugins.plugins.check_monghealth:main"
 check_hadoop = "nagios_plugins.plugins.check_hadoop:main"
 check_dig = "nagios_plugins.plugins.check_dig:main"
 check_jobs = "nagios_plugins.plugins.check_jobs:main"
-check_website_status = "nagios_plugins.plugins.check_website_status:main"
-check_ro_mounts = "nagios_plugins.plugins.check_ro_mounts:main"
 
 [project.urls]
 "Homepage" = "https://github.com/thomasvincent/nagios-plugins-collection"
